add: put sendall method
